--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
     "@types/js-cookie": "^3.0.6",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.7",
-    "concurrently": "^8.2.2",
     "emoji-picker-react": "^4.7.14",
     "express": "^4.18.2",
-    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
-    "keep-react": "^1.1.2",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "npm": "^10.4.0",
@@ -29,6 +26,7 @@
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modern-drawer": "^1.2.2",
+    "react-player": "^2.14.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "socket.io": "^4.7.4",
@@ -41,7 +39,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "daisyui": "^4.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
